fixing expect containers spacing

--- a/site/src/styles/components/_copy-containers.scss
+++ b/site/src/styles/components/_copy-containers.scss
@@ -20,12 +20,16 @@
 
 .expect-container {
   display: flex;
-  //flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   height: fit-content;
-
-
+  margin-bottom: var(--sub-nav-gap);
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+  h2 {
+    margin-bottom: 5px;
+  }
   img {
     margin-bottom: 0.938rem;
   }
@@ -46,6 +50,7 @@
   }
 
   @include md() {
+    margin-bottom: revert;
     &:nth-of-type(2) {
       img {
         padding: 14px 0;
